--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "test task for VelbeX",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "back": "npm --prefix backend run dev",
+    "front": "npm --prefix frontend run serve",
+    "go": "concurrently \"(npm run back)\" \"(npm run front)\""
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+
+  "dependencies": {
+    "concurrently": "^7.4.0"
+  }
 }
